--- a/app/src/main/res/layout/activity_rules.xml
+++ b/app/src/main/res/layout/activity_rules.xml
@@ -6,4 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".activities.RulesActivity">
 
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPagerRules"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </android.support.constraint.ConstraintLayout>
