--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         app:srcCompat="@drawable/logo" />
 
     <Button
-        android:id="@+id/bPlayer"
+        android:id="@+id/bPlay"
         android:layout_width="0dp"
         android:layout_height="53dp"
         android:layout_marginEnd="8dp"
@@ -54,7 +54,7 @@
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bPlayer" />
+        app:layout_constraintTop_toBottomOf="@+id/bPlay" />
 
     <Button
         android:id="@+id/bRules"
