--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -77,6 +77,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:background="@android:color/transparent"
         android:onClick="saveChanges"
         android:text="@string/settings_save"
         app:layout_constraintBottom_toBottomOf="parent"
