--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,6 +32,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="@string/login_email"
+        android:fontFamily="@font/greco"
         android:inputType="textPersonName"
         android:text="juanjo@gmail.com"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,6 +50,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="@string/login_password"
+        android:fontFamily="@font/greco"
         android:inputType="textPassword"
         android:text="1234"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,6 +65,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/login_goRegister"
+        android:fontFamily="@font/greco"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_password" />
 
@@ -76,6 +79,7 @@
         android:background="@android:color/transparent"
         android:onClick="goLogin"
         android:text="@string/login_login"
+        android:fontFamily="@font/greco"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_password" />
 
