--- a/app/src/main/res/layout/activity_rules.xml
+++ b/app/src/main/res/layout/activity_rules.xml
@@ -8,7 +8,7 @@
     tools:context=".activities.RulesActivity">
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/viewPagerRules"
+        android:id="@+id/slideViewPager"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </android.support.constraint.ConstraintLayout>
