--- a/app/src/main/res/layout/activity_scores.xml
+++ b/app/src/main/res/layout/activity_scores.xml
@@ -42,6 +42,7 @@
                     android:orientation="vertical">
                     <TextView android:id="@id/tab1"
                         android:text="@string/localScores"
+                        android:fontFamily="@font/greco"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
@@ -55,6 +56,7 @@
 
                     <TextView android:id="@id/tab2"
                         android:text="@string/friendsScores"
+                        android:fontFamily="@font/greco"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
