Ampliación de la baraja de cartas. Adjuntado el fichero strings en ingles de carlos y sistema de puntuacion de cartas sobre la mesa.

--- a/app/src/main/res/layout/activity_game2.xml
+++ b/app/src/main/res/layout/activity_game2.xml
@@ -197,6 +197,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/reverso_original"
+        android:onClick="cardsTableScore"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toStartOf="@+id/guideline8"
         app:layout_constraintStart_toStartOf="@+id/guideline7"
@@ -213,6 +214,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/reverso_original"
+        android:onClick="cardsTableScore"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toStartOf="@+id/guideline9"
         app:layout_constraintStart_toStartOf="@+id/guideline8"
@@ -229,6 +231,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/reverso_original"
+        android:onClick="cardsTableScore"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline9"
@@ -245,6 +248,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/reverso_original"
+        android:onClick="cardsTableScore"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
         app:layout_constraintStart_toStartOf="parent"
