--- a/app/src/main/res/layout/slide_card_layout.xml
+++ b/app/src/main/res/layout/slide_card_layout.xml
@@ -13,5 +13,5 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        app:srcCompat="@drawable/uno" />
+        app:srcCompat="@drawable/card_1" />
 </RelativeLayout>
