--- a/app/src/main/res/layout/slide_layout.xml
+++ b/app/src/main/res/layout/slide_layout.xml
@@ -26,7 +26,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="166dp"
         android:fontFamily="@font/greco"
-        android:text="TextView"
+        android:text="@string/about"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
         android:textSize="28sp"
@@ -43,7 +43,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="23dp"
         android:fontFamily="@font/greco"
-        android:text="TextView"
+        android:text="@string/nombres"
         android:textColor="@android:color/black"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
