--- a/app/src/main/res/layout/activity_scores.xml
+++ b/app/src/main/res/layout/activity_scores.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context=".activities.GameActivity">
+    tools:context="dixit.sdm.trabajo.dixit.activities.ScoresActivity">
 
     <TabHost
         android:id="@+id/my_tabhost"
@@ -35,34 +35,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <LinearLayout
-                    android:id="@+id/tab1"
+                <ListView
+                    android:id="@+id/lvLocal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-                    <TextView android:id="@id/tab1"
-                        android:text="@string/localScores"
-                        android:fontFamily="@font/greco"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                    android:layout_height="match_parent" />
 
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/tab2"
+                <ListView
+                    android:id="@+id/lvFriends"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <TextView android:id="@id/tab2"
-                        android:text="@string/friendsScores"
-                        android:fontFamily="@font/greco"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                </LinearLayout>
-
+                    android:layout_height="match_parent" />
             </FrameLayout>
         </LinearLayout>
     </TabHost>
+
 </android.support.constraint.ConstraintLayout>
