La partida se empieza a jugar. Los avances que hicimos ayer.

--- a/app/src/main/res/layout/activity_baraja.xml
+++ b/app/src/main/res/layout/activity_baraja.xml
@@ -11,12 +11,15 @@
         android:id="@+id/imageButton_azul"
         android:layout_width="100dp"
         android:layout_height="130dp"
-        android:layout_marginLeft="56dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/reverso_azul"
-        android:scaleType="fitXY"
         android:onClick="setReverso"
+        android:scaleType="fitXY"
+        app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/reverso_azul" />
@@ -26,16 +29,15 @@
         android:layout_width="100dp"
         android:layout_height="130dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="76dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/reverso_rojo"
         android:onClick="setReverso"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imageButton_azul"
+        app:layout_constraintStart_toStartOf="@+id/guideline3"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/reverso_rojo" />
 
@@ -43,10 +45,10 @@
         android:id="@+id/imageButton_original"
         android:layout_width="100dp"
         android:layout_height="130dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/reverso_original"
-        android:scaleType="fitXY"
         android:onClick="setReverso"
+        android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageButton_azul"
@@ -60,12 +62,12 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/reverso_mecanico"
         android:onClick="setReverso"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageButton_verde"
+        app:layout_constraintStart_toStartOf="@+id/guideline3"
         app:layout_constraintTop_toBottomOf="@+id/imageButton_original"
         app:srcCompat="@drawable/reverso_mecanico" />
 
@@ -73,13 +75,23 @@
         android:id="@+id/imageButton_verde"
         android:layout_width="100dp"
         android:layout_height="130dp"
-        android:layout_marginLeft="56dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/reverso_verde"
-        android:scaleType="fitXY"
         android:onClick="setReverso"
+        android:scaleType="fitXY"
+        app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageButton_original"
         app:srcCompat="@drawable/reverso_verde" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
 </android.support.constraint.ConstraintLayout>
