--- a/app/src/main/res/layout/activity_avatar.xml
+++ b/app/src/main/res/layout/activity_avatar.xml
@@ -7,6 +7,19 @@
     android:background="@drawable/bg"
     tools:context=".activities.AvatarActivity">
 
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="209dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo" />
+
 
     <ImageButton
         android:id="@+id/imageButton1"
@@ -14,11 +27,11 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="14dp"
         android:background="@android:color/transparent"
         android:onClick="setAvatar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logo"
         app:srcCompat="@drawable/ava1" />
 
     <ImageButton
@@ -29,12 +42,12 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="14dp"
         android:background="@android:color/transparent"
         android:onClick="setAvatar"
         app:layout_constraintEnd_toStartOf="@+id/imageButton3"
         app:layout_constraintStart_toEndOf="@+id/imageButton1"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logo"
         app:srcCompat="@drawable/ava2" />
 
     <ImageButton
@@ -43,11 +56,11 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="14dp"
         android:background="@android:color/transparent"
         android:onClick="setAvatar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logo"
         app:srcCompat="@drawable/ava3" />
 
     <ImageButton
