--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,10 +32,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="@string/login_email"
         android:fontFamily="@font/greco"
+        android:hint="@string/login_email"
+        android:maxLength="20"
         android:inputType="textPersonName"
-        android:text="juanjo@gmail.com"
+        android:text="juanjo2@gmail.com"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo2" />
@@ -53,7 +54,8 @@
         android:hint="@string/login_password"
         android:fontFamily="@font/greco"
         android:inputType="textPassword"
-        android:text="1234"
+        android:maxLength="20"
+        android:text="123"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_email" />
