--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -30,6 +30,7 @@
         android:layout_marginTop="32dp"
         android:ems="10"
         android:hint="@string/play_searchGame"
+        android:maxLength="10"
         android:fontFamily="@font/greco"
         android:inputType="text"
         app:layout_constraintStart_toStartOf="parent"
