--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -32,6 +32,8 @@
         android:ems="10"
         android:fontFamily="@font/greco"
         android:hint="@string/register_username"
+        android:singleLine="true"
+        android:maxLength="20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,6 +52,7 @@
         android:hint="@string/register_email"
         android:fontFamily="@font/greco"
         android:inputType="textPersonName"
+        android:maxLength="20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/register_username" />
@@ -65,6 +68,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="@string/register_password"
+        android:maxLength="20"
         android:fontFamily="@font/greco"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
