--- a/app/src/main/res/layout/dialog_puntos.xml
+++ b/app/src/main/res/layout/dialog_puntos.xml
@@ -120,7 +120,19 @@
 
     <Button
         android:id="@+id/dialog_score_ok"
-        android:layout_width="0dp"
+        android:layout_width="143dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:background="@android:color/transparent"
+        android:fontFamily="@font/greco"
+        android:text="Ok"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/dialog_score_cancel"
+        android:layout_width="135dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -128,9 +140,9 @@
         android:layout_marginStart="8dp"
         android:background="@android:color/transparent"
         android:fontFamily="@font/greco"
-        android:text="Ok"
+        android:text="CANCELAR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/dialog_score_ok" />
 
 </android.support.constraint.ConstraintLayout>
